fix : prevent scrolling of background when modal is visible

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   -ms-overflow-style: none;
 }
 
+.scroll_lock{
+  overflow: hidden;
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
